Fix truncate helper

--- a/src/helpers/helpers.css
+++ b/src/helpers/helpers.css
@@ -111,6 +111,7 @@
 
 .truncate
 {
+    display: block;
     overflow: hidden;
 
     white-space: nowrap;
